--- a/index.html
+++ b/index.html
@@ -3,6 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="description" content="진심이 현실이 되는 공간, Fandom-K" />
+    <meta name="keywords" content="당신의 사랑을 Fandom-K가 함께합니다." />
+    <meta property="og:title" content="Fandom-K" />
+    <meta
+      property="og:description"
+      content="진심이 현실이 되는 공간, 당신의 사랑을 Fandom-K가 함께합니다."
+    />
+    <meta
+      property="og:image"
+      content="https://sprint-fe-project.s3.ap-northeast-2.amazonaws.com/Fandom-K/idol/1745983896781/og-thumbnail.jpg"
+    />
+    <meta property="og:url" content="https://fandom-k-three.vercel.app/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Fandom-K" />
+    <meta
+      name="twitter:description"
+      content="진심이 현실이 되는 공간, 당신의 사랑을 Fandom-K가 함께합니다."
+    />
+    <meta
+      name="twitter:image"
+      content="https://sprint-fe-project.s3.ap-northeast-2.amazonaws.com/Fandom-K/idol/1745983896781/og-thumbnail.jpg"
+    />
+
     <title>Fandom-K</title>
     <link
       rel="preload"
